# txt2epub-pdf

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: index.html
docs/html/: 404.html  index.html
docs/htmlcov/: index.html  status.json  txt2epub_pdf___init___py.html  txt2epub_pdf_console_py.html  txt2epub_pdf_package_py.html
docs/search/: search_index.json
mkdocs/: mkdocs.yml
mkdocs/docs/: index.md
tests/: test_package.py
tests/TEST BOOK/: 1 第１章.txt  2 第２章.txt
txt2epub_pdf/: __init__.py  console.py  package.py
txt2epub_pdf/style-epub/: book-style.css  style-reflow.css
txt2epub_pdf/style-pdf/: book-style.css  style-reflow.css  style-standard.css
